--- a/www.nass.gov.ng/8010f57784f2dc84c0457efaa30f4b2e87a93a79.yml
+++ b/www.nass.gov.ng/8010f57784f2dc84c0457efaa30f4b2e87a93a79.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 04:42:36 GMT
+    - Thu, 29 Mar 2018 03:42:04 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=DlbS1M%2C4gTH%2ClyAGTTiGH3; path=/
+    - PHPSESSID=ZvKaXdO0RXEvzsSer2f2t3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 04:42:36 GMT
+recorded_at: Thu, 29 Mar 2018 03:42:04 GMT
