--- a/www.nass.gov.ng/67f991cdaed5c8c1f857da2dc539c7640c53ae8e.yml
+++ b/www.nass.gov.ng/67f991cdaed5c8c1f857da2dc539c7640c53ae8e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 04:45:17 GMT
+    - Thu, 29 Mar 2018 03:45:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=FBdRoObWBt1cx6ZKa%2Chk-2; path=/
+    - PHPSESSID=cVIb3ME58D6LnWS8zMP6z1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 04:45:17 GMT
+recorded_at: Thu, 29 Mar 2018 03:45:12 GMT
