--- a/www.nass.gov.ng/2f819bec55413baf1a12ae621161a04d26ce12ad.yml
+++ b/www.nass.gov.ng/2f819bec55413baf1a12ae621161a04d26ce12ad.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 04:50:41 GMT
+    - Thu, 29 Mar 2018 03:50:35 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=KC3oeIG%2CvG4MHaZGTAGPS1; path=/
+    - PHPSESSID=jnAN4FgS6nEDJH6TMYAyb1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 04:50:41 GMT
+recorded_at: Thu, 29 Mar 2018 03:50:35 GMT
