--- a/www.nass.gov.ng/e4a50148e8e3676c8b25608b433a6a6a7d28eae4.yml
+++ b/www.nass.gov.ng/e4a50148e8e3676c8b25608b433a6a6a7d28eae4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 05:10:13 GMT
+    - Thu, 29 Mar 2018 04:12:08 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Ax%2C5B9rQODY4V7xfKej7H0; path=/
+    - PHPSESSID=mmt7N8i8LMupzlITS7MCS3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 05:10:16 GMT
+recorded_at: Thu, 29 Mar 2018 04:12:08 GMT
