--- a/www.nass.gov.ng/d28a062319d965aec4e8390c2de4d8a30f79aaf5.yml
+++ b/www.nass.gov.ng/d28a062319d965aec4e8390c2de4d8a30f79aaf5.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 05:13:23 GMT
+    - Thu, 29 Mar 2018 04:15:42 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=yIWGmLrA%2CxdAaAsCReqQp0; path=/
+    - PHPSESSID=QfGjKjtUlpcSm6lSIXOdD3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 05:13:23 GMT
+recorded_at: Thu, 29 Mar 2018 04:15:42 GMT
