--- a/www.nass.gov.ng/4a427c01dc7f4071d7bcad524a8b8c23e6ff8c14.yml
+++ b/www.nass.gov.ng/4a427c01dc7f4071d7bcad524a8b8c23e6ff8c14.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 05:23:42 GMT
+    - Thu, 29 Mar 2018 04:24:57 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=KuodxOYVgoIqXAyfxjHeS3; path=/
+    - PHPSESSID=50vdFGhe5sJ5q7e0E1V6%2C1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 05:23:42 GMT
+recorded_at: Thu, 29 Mar 2018 04:24:57 GMT
