--- a/www.nass.gov.ng/a7a1c1264937b3cd018926568f9b077bebb30ca2.yml
+++ b/www.nass.gov.ng/a7a1c1264937b3cd018926568f9b077bebb30ca2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 05:28:28 GMT
+    - Thu, 29 Mar 2018 04:30:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=77T3lT0TRq%2CpFb4gqCiJX0; path=/
+    - PHPSESSID=mD81T4D2DlRBkOpoyUEE12; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 05:28:28 GMT
+recorded_at: Thu, 29 Mar 2018 04:30:30 GMT
