--- a/www.nass.gov.ng/88e5f4d49e2997901adef39797f3a2d567c7fb80.yml
+++ b/www.nass.gov.ng/88e5f4d49e2997901adef39797f3a2d567c7fb80.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 05:32:23 GMT
+    - Thu, 29 Mar 2018 04:35:24 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=qDOgiZaPqI%2C1CI533hEe%2C2; path=/
+    - PHPSESSID=CMO-2RukmsQdhZ8AYz7su2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 05:32:23 GMT
+recorded_at: Thu, 29 Mar 2018 04:35:24 GMT
