--- a/www.nass.gov.ng/c03d22e2b8971049ea843fb1c5b610ec9550da75.yml
+++ b/www.nass.gov.ng/c03d22e2b8971049ea843fb1c5b610ec9550da75.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 05:38:39 GMT
+    - Thu, 29 Mar 2018 04:42:00 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Ur2MCkEO%2CglgFyez0yeqo3; path=/
+    - PHPSESSID=-T3lHIZmniJSKEkKill731; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 05:38:39 GMT
+recorded_at: Thu, 29 Mar 2018 04:42:00 GMT
