--- a/www.nass.gov.ng/afc82284e730869e7ddee6211ac162cebaaac970.yml
+++ b/www.nass.gov.ng/afc82284e730869e7ddee6211ac162cebaaac970.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 05:39:05 GMT
+    - Thu, 29 Mar 2018 04:42:41 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=YbVJXMs1pnOccNjcdvyiK2; path=/
+    - PHPSESSID=XdBbznAg%2CmnAXH%2CEQY4m22; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 05:39:05 GMT
+recorded_at: Thu, 29 Mar 2018 04:42:41 GMT
