--- a/www.nass.gov.ng/f967d70812a594c54f3aa36da7155b3b13979257.yml
+++ b/www.nass.gov.ng/f967d70812a594c54f3aa36da7155b3b13979257.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 05:39:37 GMT
+    - Thu, 29 Mar 2018 04:43:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Ixiogr%2CG8g0DvxI%2Cp-tgd2; path=/
+    - PHPSESSID=NSLIiGvIxPZfDvKJULfAW2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 05:39:37 GMT
+recorded_at: Thu, 29 Mar 2018 04:43:34 GMT
