--- a/www.nass.gov.ng/d262b3f4a2b1dd6ad8b77c58ff613a3e529c76d4.yml
+++ b/www.nass.gov.ng/d262b3f4a2b1dd6ad8b77c58ff613a3e529c76d4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 05:44:07 GMT
+    - Thu, 29 Mar 2018 04:48:00 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=nM-GZBC%2CFWDnpseh1XNcY1; path=/
+    - PHPSESSID=GWvNIqKge4bgKfq7tDgw%2C2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 05:44:07 GMT
+recorded_at: Thu, 29 Mar 2018 04:48:00 GMT
