--- a/www.nass.gov.ng/0eb5687ed5cedd862ec1370cbb46981da8dcef40.yml
+++ b/www.nass.gov.ng/0eb5687ed5cedd862ec1370cbb46981da8dcef40.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 05:54:11 GMT
+    - Thu, 29 Mar 2018 05:00:46 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ajL%2CRbEbGBKMyh%2CJLLF8G2; path=/
+    - PHPSESSID=il%2CeIb4jXy%2C%2CpINyE3oUu2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 05:54:11 GMT
+recorded_at: Thu, 29 Mar 2018 05:00:46 GMT
