--- a/www.nass.gov.ng/849376bfd6146a66aed2635e03b87ae6696b98f1.yml
+++ b/www.nass.gov.ng/849376bfd6146a66aed2635e03b87ae6696b98f1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 05:54:29 GMT
+    - Thu, 29 Mar 2018 05:01:14 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=xUMsEe%2C7yVOCTaohq-CRf3; path=/
+    - PHPSESSID=FtjI1aVYs6Ner179h%2CA0n1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 05:54:29 GMT
+recorded_at: Thu, 29 Mar 2018 05:01:14 GMT
