--- a/www.nass.gov.ng/ecaeb1c0a4881e8724d62b7d9dc85139fb441f6b.yml
+++ b/www.nass.gov.ng/ecaeb1c0a4881e8724d62b7d9dc85139fb441f6b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 06:08:11 GMT
+    - Thu, 29 Mar 2018 05:18:20 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=1Tk10Gx9Xe60UqCYZpXIH0; path=/
+    - PHPSESSID=iHhX4JpwD0Mcn%2CyNcX3we0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 06:08:11 GMT
+recorded_at: Thu, 29 Mar 2018 05:18:20 GMT
