--- a/www.nass.gov.ng/07435dc83e3f777a4dfc6350a9d9a6da4224da6a.yml
+++ b/www.nass.gov.ng/07435dc83e3f777a4dfc6350a9d9a6da4224da6a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 06:15:13 GMT
+    - Thu, 29 Mar 2018 05:23:40 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=pUvoza4sKRt3201uo9Fts2; path=/
+    - PHPSESSID=wG912fAEt%2CMSWxHBnBfZZ1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 06:15:13 GMT
+recorded_at: Thu, 29 Mar 2018 05:23:40 GMT
