--- a/www.nass.gov.ng/2204a1f8329631bb9e07a5815e78f836c77754cf.yml
+++ b/www.nass.gov.ng/2204a1f8329631bb9e07a5815e78f836c77754cf.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 06:18:17 GMT
+    - Thu, 29 Mar 2018 05:26:23 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=vUn0TgqbJwBSkER3SwCsK3; path=/
+    - PHPSESSID=Jt0E94n%2C-Mda7eFOwpxEq3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 06:18:18 GMT
+recorded_at: Thu, 29 Mar 2018 05:26:23 GMT
