--- a/www.nass.gov.ng/a9d9b9708d3bd748c419f7bfe64716d9b268dec7.yml
+++ b/www.nass.gov.ng/a9d9b9708d3bd748c419f7bfe64716d9b268dec7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 06:18:39 GMT
+    - Thu, 29 Mar 2018 05:26:44 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=alsuVTqbvXMNev1wNLIZ52; path=/
+    - PHPSESSID=JUsrkV3TXU%2C%2CL15Z%2CFSDY1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 06:18:39 GMT
+recorded_at: Thu, 29 Mar 2018 05:26:44 GMT
