--- a/www.nass.gov.ng/5cdd64b08d5a7e14740c538776e58c6f2f2177e5.yml
+++ b/www.nass.gov.ng/5cdd64b08d5a7e14740c538776e58c6f2f2177e5.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 06:19:29 GMT
+    - Thu, 29 Mar 2018 05:27:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=eki8EMdAIQ7dVv0%2CeXupO3; path=/
+    - PHPSESSID=LaEYaDk59nMz9ZDDuK89h3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 06:19:29 GMT
+recorded_at: Thu, 29 Mar 2018 05:27:34 GMT
